Fix applied to PointToPointRoute. Markers did not display after undo was called.